--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Instagram</title>
 
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="instagram-wrapper">
         <div class="instagram-phone">
-        <img src="./style/img/instagram-celular.png" alt="celular">
+        <img src="./img/instagram-celular.png" alt="celular">
         </div>
         <div class="instagram-continue">
             <div class="group">
-                <img src="./style/img/instagram-logo.png" class="instagram-logo" alt="instagram logo">
+                <img src="./img/instagram-logo.png" class="instagram-logo" alt="instagram logo">
                 <div class="profile-photo">
-                    <img src="./style/img/transferir.png" alt="foto de perfil">
+                    <img src="./img/transferir.png" alt="foto de perfil">
                 </div>
                 <a href="#" class="instagram-login">Continue como 99nascimento</a>
                 <a href="#" class="instagram-logout">Remover conta</a>
